--- a/collage/templates/base/base.html
+++ b/collage/templates/base/base.html
@@ -117,6 +117,10 @@
                                     <a class="link" href="#">Update Student Info</a>
                                 </div>
 
+                                <div class="my-1 ">
+                                    <a class="link" href="{% url 'add_student' %}">Add Student</a>
+                                </div>
+
                                 <!-- <span class="py-1 ">
                                     <a href="#">Students Info</a>
                                 </span> -->
@@ -129,9 +133,24 @@
 
 
                     {% if request.user.is_authenticated %}
+        
+                    <div class=" info-div ">
+                        <div style="text-align: left !important;" class="info {% if '/subjects/' in request.path %} div-active-info {% endif %}">
+                            <span>Subjects <i class="fa-solid fa-chevron-down"></i> </span>
+                            <div class="info-after">
+                                <div  class="my-1 {% if '/show-subjects/' in request.path %} div-active {% endif %}">
+                                    <a class="link" href="{% url 'subjects' %}">Subjects</a>
+                                </div>
 
-                    <div class="d-flex align-items-center {% if '/subjects/' in request.path %} div-active {%endif%}">
-                        <a href="{% url 'subjects' %}">Subjects</a>
+                                <div class="my-1 {% if '/add-subjects-excel/' in request.path %} div-active {% endif %} ">
+                                    <a class="link" href="{% url 'add_subjects_excel' %}">Add Subjects</a>
+                                </div>
+
+                                <!-- <span class="py-1 ">
+                                    <a href="#">Students Info</a>
+                                </span> -->
+                            </div>
+                        </div>
                     </div>
 
                     {% endif %}
