updated attendece functionlity

--- a/collage/templates/base/base.html
+++ b/collage/templates/base/base.html
@@ -216,7 +216,7 @@
         AOS.init();
     </script>
 
-    <footer class="container-fluid bg-dark pt-3">
+    <footer class="container-fluid bg-dark pt-3 mt-5">
         <div  class=" text-center text-white">
             <p>
                 Copyright &copy; IPI 
